<resources>
    <string name="app_name" translatable="false">Lister</string>
    <string name="action_sort">Sorting type</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="add_note_title_hint">Note title (21 char max)</string>
    <string name="add_note_body_hint">Note text</string>
    <string name="add_note">New note</string>
    <string name="edit_note">Edit note</string>
    <string name="context_delete">Delete note</string>
    <string name="context_edit">Edit note</string>
    <string name="context_pin">Pin to top</string>
    <string name="answer_yes">Yes</string>
    <string name="answer_no">No</string>
    <string name="set">Set</string>
    <string name="set_reminder">Set reminder</string>
    <string name="pin_to_top">Pin to top</string>
    <string name="unpin">Unpin this note</string>
    <string name="set_password">Set password</string>
    <string name="enter_password_hint">Enter password (15 char max)</string>
    <string name="enter_password">Enter password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="added_sign">Added</string>
    <string name="created_time">Sort by created time</string>
    <string name="created_time_reversed">Sort by created time reversed</string>
    <string name="alphabetically">Sort alphabetically</string>
    <string name="alphabetically_reversed">Sort alphabetically reversed</string>
    <string name="empty_list_text">You don\'t have any notes! \n Press \'+\' button to add a couple!</string>
    <string name="empty_search_text">No result</string>
    <string name="save">Save</string>
    <string name="pin">Pin</string>
    <string name="change">Change</string>
    <string name="remove">Remove</string>
    <string name="info_edit">Edit</string>
    <string name="info_delete">Delete</string>
    <string name="attach_picture">Attach picture</string>
    <string name="file_not_found">File not found</string>
    <string name="search_hint">Search…</string>
    <string name="confirm">Please confirm</string>
    <string name="cancel">Cancel</string>
    <string name="delete_note_text">Are you sure you want to delete this note? This action cannot be undone.</string>
    <string name="remove_picture_text">Are you sure you want to remove picture? This action cannot be undone.</string>
    <string name="successful_deleting_note">Note successfully deleted</string>
    <string name="successful_removing_picture">Picture removed</string>
    <string name="wrong_password">Wrong password!</string>
    <string name="choose_sorting">Choose sorting type</string>
    <string name="sort">Sort</string>
    <string name="enter">Enter</string>
    <string name="successful_adding">Note successfully added</string>
    <string name="successful_editing">Note successfully edited</string>
    <string name="text_hidden"><i>Text hidden</i></string>
    <string name="no_text"><i>No text</i></string>
    <string name="today">today </string>
    <string name="yesterday">yesterday </string>
    <string name="tomorrow">tomorrow </string>
    <string name="at">at </string>
    <string name="key_reminder_set_to">Reminder set to: </string>
    <string name="key_added">Added </string>
    <string name="successful_attaching_picture">Picture attached to note</string>
    <string name="picture_not_selected">No picture selected</string>
    <string name="successful_attaching_photo">Photo attached to note</string>
    <string name="photo_not_selected">No photo taken</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="take_photo">Take photo</string>
    <string name="picture_replacing_text">Picture will be replaced. Continue?</string>
    <string name="removing_reminder_text">Are you sure you want to remove reminder? This action cannot be undone.</string>
    <string name="warning">Warning</string>
    <string name="get_it">Get it</string>
    <string name="note_without_text">Note doesn\'t have text. Password will not be saved.</string>
    <string name="removing_password_text">Are you sure you want to remove password? This action cannot be undone.</string>
    <string name="enter_password_warning">Please, enter password</string>
    <string name="passwords_do_not_match_warning">Passwords do not match</string>
    <string name="password_short_warning">Password length must be at least 5 characters</string>
    <string name="not_correct_password_warning">Password must contain only letters and digits</string>
    <string name="enter_title_warning">Please, enter title</string>
    <string name="reminder_out">Reminder time is out. Please change time or remove reminder</string>
    <string name="discarding_text">"Are you sure you want to close this window? All changes will be discarded."</string>
    <string name="save_text">Are you sure you want to save changes?</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="theme">Theme</string>
    <string name="reminder_set_to_past_warning">Wrong reminder\'s time</string>
    <string name="choose_theme_text">Choose color theme</string>
    <string name="settings_general">General</string>
    <string name="settings_language">Language</string>
    <string name="settings_language_dialog">Application language</string>
    <string name="settings_theme">Application color theme</string>
    <string name="settings_notifications">Notification settings</string>
    <string name="settings_hide_text">Hide text</string>
    <string name="settings_hide_text_on">Note text always hidden</string>
    <string name="settings_hide_text_off">Note text hidden only if password set</string>
    <string name="settings_ringtone">Ringtone</string>
    <string name="settings_vibration">Vibration</string>
    <string name="settings_led">Indicator color</string>
    <string name="select_ringtone">Select notification ringtone</string>

    <string-array name="langs_items">
        <item>System default</item>
        <item>English</item>
        <item>Русский</item>
    </string-array>

    <string-array name="langs_values">
        <item>def</item>
        <item>en</item>
        <item>ru</item>
    </string-array>

    <string-array name="led_items">
        <item>Blue</item>
        <item>Yellow</item>
        <item>Purple</item>
        <item>Pink</item>
        <item>White</item>
    </string-array>

    <string-array name="led_values">
        <item>led_blue</item>
        <item>led_yellow</item>
        <item>led_purple</item>
        <item>led_pink</item>
        <item>led_white</item>
    </string-array>
</resources>